# sqd-query-engine

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  INTEGRATION.md  LEGACY_BENCH.md  PLAN.md  QUERY_PATTERNS.md  README.md  TASK.md
.agents/skills/product-acceptance-criteria/references/: python.md
.claude/skills/product-acceptance-criteria/references/: nodejs.md  rust.md
benches/: queries.rs
benches/hot_bench/: loader.rs  main.rs
benches/latency/: main.rs
benches/legacy_bench/: loader.rs  main.rs
benches/profile/: main.rs
benches/query/: main.rs
benches/storage_bench/: loader.rs  main.rs
benches/throughput/: main.rs
benches/write_bench/: main.rs
decisions/: 001-query-execution-pipeline.md  002-json-serialization-strategy.md
docs/: 01.execution.md  02.storage.md  weight-calculation.md
docs/decisions/: 002-storage-tier-design.md
examples/: profile_bench.rs
metadata/: README.md  evm.yaml  fuel.yaml  solana.yaml  substrate.yaml
src/: lib.rs
src/join/: hierarchical.rs  mod.rs  semi_join.rs
src/metadata/: README.md  loader.rs  types.rs
src/output/: assembly.rs  block_index.rs  columns.rs  encoder.rs  mod.rs  row_writer.rs  weight.rs  writer.rs
src/query/: mod.rs  parse.rs  plan.rs
src/scan/: chunk.rs  composite_reader.rs  crash_log.rs  dataset_store.rs  kv_scan.rs  legacy_backend.rs  lmdb_backend.rs  memory_backend.rs  mod.rs  parquet_writer.rs  predicate.rs  rocks_backend.rs  scanner.rs  wal.rs
tests/: e2e_fixtures.rs  fuzz_storage.proptest-regressions  fuzz_storage.rs  integration_store.rs  redteam_storage.rs
