[package]
name = "sqd-query-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = { version = "54", features = ["ffi"] }
parquet = { version = "54", features = ["arrow"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
anyhow = "1"
itoa = "1"
memmap2 = "0.9"
bytes = "1"
faster-hex = "0.10"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
ryu = "1.0.23"
rustc-hash = "2"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[features]
default = []
lmdb = ["dep:heed", "dep:zstd"]
rocksdb = ["dep:rocksdb"]
legacy-storage = ["dep:sqd-storage", "dep:sqd-primitives"]
legacy-query = ["dep:sqd-query", "legacy-storage"]

[dependencies.zstd]
version = "0.13"
optional = true

[dependencies.heed]
version = "0.20"
optional = true

[dependencies.rocksdb]
version = "0.23"
optional = true

[dependencies.sqd-storage]
path = "../data/crates/storage"
optional = true

[dependencies.sqd-primitives]
path = "../data/crates/primitives"
features = ["range"]
optional = true

[dependencies.sqd-query]
path = "../data/crates/query"
optional = true
features = ["parquet", "storage"]

[dev-dependencies]
divan = "0.1"
paste = "1.0.15"
proptest = "1"
tempfile = "3"

[[bench]]
name = "latency"
harness = false

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "profile"
harness = false

[[bench]]
name = "storage_bench"
harness = false
required-features = ["lmdb", "rocksdb", "legacy-query"]

[[bench]]
name = "legacy_bench"
harness = false
required-features = ["legacy-query"]

[[bench]]
name = "hot_bench"
harness = false
required-features = ["legacy-query"]

[[bench]]
name = "write_bench"
harness = false
